--- a/typedUrls.html
+++ b/typedUrls.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>Recently Typed URLs</title>
+    <title>Locations you like</title>
     <style>
       body {min-width: 250px;}
     </style>
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <h2>Recently Typed URLs:</h2>
+    <h2>Locations you frequent:</h2>
     <div id="typedUrl_div"></div>
   </body>
 </html>
